Minor code quality fix